Fix toast width on mobile

--- a/src/scss/components/_toast.scss
+++ b/src/scss/components/_toast.scss
@@ -16,8 +16,7 @@
 	color: $formosa-primary-color;
 	display: flex;
 	margin: $formosa-toast-margin;
-	max-width: 50vw;
-	width: max-content;
+	max-width: 90vw;
 }
 
 .formosa-toast__text {
